feat: thumbnail, better sending optics

--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <title>Koji's Portfolio</title>
     <meta name="author" content="Koji Wong" />
 
-    <meta property="og:title" content="Koji's Portfolio" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kojirwong.dev" /> 
+    <meta property="og:title" content="Koji's Portfolio" />
+    <meta property="og:image" content="/thumbnail.png" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://kojirwong.dev" /> 
+    <meta property="twitter:title" content="Koji's Portfolio" />
+    <meta property="twitter:image" content="/thumbnail.png" />
 
   </head>
 
